Random Color Genrator Using JavaScript

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Color</title>
+    <title>Random Color Genrator</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;
@@ -20,7 +20,6 @@
             <button>Get Random Color</button>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 
